<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">اتمسكت</string>

    <!-- Tabs titles -->
    <string name="title_section1">مكان القبض</string>
    <string name="title_section2">جهة القبض</string>
    <string name="title_section3">معلومات إضافية</string>

    <string-array name="location_strings">
        <item>مظاهرة</item>
        <item>شارع</item>
        <item>منزل</item>
    </string-array>
    <string-array name="autority_strings">
        <item>الشرطة</item>
        <item>الجيش</item>
        <item>بلطجية</item>
    </string-array>

    <!-- Content description for each icon in the row of the list view -->
    <string name="description">Image</string>

    <!-- Title of Settings Activity -->
    <string name="title_activity_settings">إعدادات</string>
    <string name="title_activity_settings_facebook">إعدادات - فيسبوك</string>

    <!-- String values of action bar icons -->
    <string name="action_send">إرسال</string>
    <string name="action_settings">إعدادات</string>
    <string name="action_help">مساعدة</string>

    <!-- Sections Divider Titles -->
    <string name="pref_category_a">حسابات مواقع التواصل</string>
    <string name="pref_category_b">تحديث المكان</string>

    <!-- Social Network group of preferences -->
    <string name="pref_facebook_title">فيسبوك</string>
    <string name="pref_twitter_title">تويتر</string>
    <string name="pref_gmail_title">جوجل إيميل</string>

    <!-- Location updates group of preferences -->
    <string name="pref_loc_update">تتبع المكان</string>
    <string name="pref_loc_update_freq">مدة التحديث التلقائي</string>

    <!--This is the application ID, that is obtained after creating Facebook application in FB developer console-->
    <string name="app_id">733540373322973</string>


    <string name="pref_custom_add_account">أضف حساب</string>
    <!-- The human-readable array to present as a preferences list of available accounts types -->
    <string-array name="pref_account_types_entries">
        <item name="pref_facebook">فيسبوك</item>
        <item name="pref_twitter">تويتر</item>
        <item name="pref_gmail">جوجل إيميل</item>
    </string-array>

    <!-- The array to find the value to save for a preference when an entry from entries is selected. -->
    <string-array name="pref_account_types_values">
        <item name="pref_facebook">1</item>
        <item name="pref_twitter">2</item>
        <item name="pref_gmail">3</item>
    </string-array>

    <!-- Warning Toast message that will show up if user tries to add same account type twice. -->
    <string name="warn_msg_part_1">يمكن تسجيل حساب</string>
    <string name="warn_msg_part_2">واحدا فقط</string>
    <string name="action_login">Login</string>
    <string name="action_like">Like</string>

    <!-- Titles of Action Provides sub-menus that will show up to the user. -->
    <string name="no_mil_trials">صفحة لا للمحاكمات العسكرية</string>
    <string name="ifraag">صفحة إفراج</string>
    <string name="fdep">صفحة جبهة الدفاع عن متظاهري مصر</string>

    <!-- Dynamic resource IDs for icons of facebook pages that user will like -->
    <item type="id" name="menu_id_no_mil_trials"/>
    <item type="id" name="menu_id_ifraag"/>
    <item type="id" name="menu_id_fdep"/>

    <!-- Title and Message body for warning dialog for sending arrested message for phones and social accounts-->
    <string name="warn_dialg_send_title">بلاغ بالقبض عليك</string>
    <string name="warn_dialg_send_msg">أنت الآن ستقوم بإرسال البلاغ لكل أرقام الهواتف المسجلة و على حسابات مواقع التواصل الخاصة بك</string>
    <string name="warn_dailog_send_negative">إلغاء</string>
    <string name="warn_dailog_send_positive">إرسل</string>
</resources>
