<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- First section divider represents user accounts on different social networks; facebook, twitter & GMail -->
    <PreferenceCategory
        android:title="@string/pref_category_a">

        <PreferenceScreen
            android:key="pref_key_facebook"
            android:icon="@drawable/ic_facebook_logo"
            android:title="@string/pref_facebook_title">

            <intent android:action="com.ifraag.arrested.action.VIEW"
                android:targetClass="com.ifraag.arrested.SettingsActivity"
                android:data="preferences://fb_activity"/>
        </PreferenceScreen>

        <PreferenceScreen
            android:key="pref_key_twitter"
            android:icon="@drawable/ic_twitter_logo"
            android:title="@string/pref_twitter_title">

            <intent android:action="com.ifraag.arrested.action.VIEW"
                android:targetClass="com.ifraag.arrested.SettingsActivity"
                android:data="preferences://twt_activity"/>
        </PreferenceScreen>

        <PreferenceScreen
            android:key="pref_key_gmail"
            android:icon="@drawable/gmail_logo"
            android:title="@string/pref_gmail_title">

            <intent android:action="com.ifraag.arrested.action.VIEW"
                android:targetClass="com.ifraag.arrested.SettingsActivity"
                android:data="preferences://gm_activity"/>
        </PreferenceScreen>

    </PreferenceCategory>

    <!-- Second section divider represents preferences on how to update user's location periodically. -->
    <PreferenceCategory
        android:title="@string/pref_category_b">

        <Preference
            android:key="pref_key_loc_update"
            android:title="@string/pref_loc_update"/>
        <Preference
            android:key="pref_key_loc_update_freq"
            android:title="@string/pref_loc_update_freq"/>
    </PreferenceCategory>
</PreferenceScreen>